2006-01-15  Gautier Portet <kassoulet gmail com>

	* soundconverter.glade: Reverted to old UI to make a release soon.
	* soundconverter.py: Changed the gst-lame problem at vbr-quality=9
	  handling for a cleaner one. 

2006-01-11  Gautier Portet <kassoulet gmail com>

	* Makefile: Added install-local. 
	  #1154 (Thanks Régis & Janis)
	* Added a makedirs() that use gnomevfs, so folders will really be
	  created now, even on remote filesystems.

2006-01-10  Gautier Portet <kassoulet gmail com>

	* Wow, fixed the problem when we generate filenames from tags but tags
	  are not read when preparing filenames.
	  This was a big mess, and I tried numerous solutions, but I will keep
	  the only one that is working for now: just wait tags to be read
	  before starting conversion. Sorry, this sucks...
	  Hopefully I read that GStreamer 0.10 is better with threads :)

2006-01-07  Gautier Portet <kassoulet gmail com>

	* Added the possibility to pause the conversion.

2005-12-25  Gautier Portet <kassoulet gmail com>

	* Files can only be added once in the list.

2005-12-22  Gautier Portet <kassoulet gmail com>

	* Finally got walking on gnomevfs to work. Now folder importing is really
	  usable...
	* Added a default to tags, so tag-filled destination paths will
	  be valid.

2005-12-20  Gautier Portet  <kassoulet gmail com>

	* Better type detection.
	* Temporary solved the (non?) problem when trying to convert files which
	  don't have tags filled yet.
	

2005-12-05  Gautier Portet  <kassoulet gmail com>

	* Files types are now detected at loading, expect filtering on types
	  soon.

2005-11-29 Gautier Portet  <kassoulet gmail com>

	* file list is now filled asynchronously with tags if they are
	  present.
	* list display is handled completely differently, hope its better like
	  this

2005-11-08  Gautier Portet <kassoulet gmail com>

	* better folder dropping: now we generate a good base/filename for
	  SoundFile. But it works not so well when we want to create folders