@@ -1,3 +1,8 @@
+2006-01-16  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: hum?!?!? File dropping was *again* broken, maybe
+	  it's my evil twin which edit the code :)
+
 2006-01-15  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.glade: Reverted to old UI to make a release soon.
